<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.example.android.fragments.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@mipmap/ic_config"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="com.example.android.fragments.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@mipmap/ic_config"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="com.example.android.fragments.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@mipmap/ic_config"
        android:title="@string/pref_header_data_sync" />

</preference-headers>
